--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
 		<div class="headerButton" id="header3">3</div>
 		<div class="headerButton" id="headerPersonal">p.o.</div>
 	</header>
-	<div id="display">
-		<div id="linksContainer">
+	<div id="homeContainer">
+		<div id="homeLeft">
+			<h2>Visual Interface Design</h2>
+			<p>UwU</p>
+			<p>OwO</p>
+			<p>UwU</p>
+		</div>
+		<div id="homeRight">
+			F
+		</div>
+	</div>
+	<div id="display" class="displayNone">
+		<div id="linksContainer" style="height: 0vh;">
 			<div class="linkButton activeButton" id="linkBeeldtaal">Beeldtaal</div>
 			<div class="linkButton" id="linkTypografie">Typografie</div>
 			<div class="linkButton" id="linkOntwerpen1">Ontwerpen1</div>
 		</div>
-		<div id="ContentContainer">
+		<div id="ContentContainer" class="displayNone">
 			<h3 id="contentTitle">Beeldtaal</h3>
 			<p id="contentDesc">Beeldtaal is OwO</p>
 			<img id="contentImg" src="img/background.png">
