Added subject information
oof

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<h3 id="contentTitle">Beeldtaal</h3>
 			<p id="contentDesc">Beeldtaal is OwO</p>
 			<img id="contentImg" src="img/background.png">
-			<a id="contentLink" href="">Watch here OwO</a>
+			<a id="contentLink" href="" target="_blank">Klik hier om het resultaat te bekijken.</a>
 		</div>
 	</div>
 </body>
