--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
 	</header>
 	<div id="homeContainer">
 		<div id="homeLeft">
+			<h2>Wie ben ik</h2>
+			<p>Mijn naam is Bart van der Lans, een 3e jaars informatica student op de Hogeschool Leiden, en heb in 2020 de minor Visual Interface Design gevolgd op de Hogeschool van Amsterdam.</p>
 			<h2>Visual Interface Design</h2>
-			<p>UwU</p>
-			<p>OwO</p>
-			<p>UwU</p>
+			<p>De visual interface designer ontwerpt de 'look & feel & touch' van een gebruiksvriendelijke, communicatieve en betekenisvolle interactieve media toepassing. Als deelnemer aan de minor visual interface design ontwikkel en verdiep je de kennis en vaardigheden die essentieel zijn voor het ontwerpen hiervan.</p>
+			<h2>Berlijn</h2>
+			<p>Tijdens de minor zijn we ook met de hele groep een week naar Berlijn geweest om foto's van verschillende interfaces te verzamelen. Een van deze interfaces is hier naast deze tekst te zien:</p>
+			<h2>Deze pagina</h2>
+			<p>Op deze webpagina zal ik al mijn resultaten van de Visual Interface Design minor laten zien. In totaal waren er 3 periodes met elk 2 vakken en een project aan het einde, behalve periode. Het project van periode 2 was namelijk samengevoegd met het project van periode 3. Ook waren er nog 3 overige opdrachten onder Persoonlijke Ontwikkeling die ook op deze pagina te vinden zijn. Mocht het resultaat van deze opdrachten en projecten online staan zal er ook een link te vinden zijn zodat u zelf het resultaat kan bekijken.</p>
 		</div>
-		<div id="homeRight">
-			F
-		</div>
+		<div id="homeRight"></div>
 	</div>
 	<div id="display" class="displayNone">
 		<div id="linksContainer" style="height: 0vh;">
